essay-project-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: essay-project-service
spec:
  selector:
    app: essay-project-deployment
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
